<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.byteslounge</groupId>
	<artifactId>cdi-properties</artifactId>
	<version>1.2.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>CDI Properties</name>
	<description>A CDI extension that enables resource bundle injection and resolution in Java EE applications.</description>
	<url>https://github.com/gonmarques/cdi-properties</url>
	<inceptionYear>2014</inceptionYear>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>gonmarques</id>
			<name>Gonçalo Marques</name>
		</developer>
	</developers>

	<scm>
		<url>https://github.com/gonmarques/cdi-properties.git</url>
		<connection>scm:git:git://github.com/gonmarques/cdi-properties.git</connection>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.7</java.version>
		<javaee-api.version>6.0</javaee-api.version>
		<slf4j-api.version>1.7.5</slf4j-api.version>
		<junit.version>4.11</junit.version>
		<arquillian-junit-container.version>1.1.5.Final</arquillian-junit-container.version>
		<arquillian-glassfish-embedded.version>1.0.0.CR4</arquillian-glassfish-embedded.version>
		<glassfish-embedded.version>4.1</glassfish-embedded.version>
		<arquillian-drone-bom.version>1.3.1.Final</arquillian-drone-bom.version>
		<maven-compiler.version>3.1</maven-compiler.version>
		<maven-resources.version>2.4</maven-resources.version>
		<maven-failsafe-plugin.version>2.11</maven-failsafe-plugin.version>
		<maven-source-plugin.version>2.2.1</maven-source-plugin.version>
		<maven-javadoc-plugin.version>2.9.1</maven-javadoc-plugin.version>
		<graphene-webdriver.version>2.0.3.Final</graphene-webdriver.version>
		<h2.version>1.3.173</h2.version>
	</properties>

	<profiles>
		<profile>
			<id>SkipTests</id>
			<activation>
				<property>
					<name>skipTests</name>
				</property>
			</activation>
			<properties>
				<skipTests>true</skipTests>
			</properties>
		</profile>
		<profile>
			<id>OSSRH</id>
			<activation>
				<property>
					<name>ossrh</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>${maven-source-plugin.version}</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>${maven-javadoc-plugin.version}</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.5</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>1.6.2</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>false</autoReleaseAfterClose>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>${maven-resources.version}</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>${maven-failsafe-plugin.version}</version>
				<configuration>
					<useSystemClassLoader>false</useSystemClassLoader>
					<systemPropertyVariables>
						<project.version>${project.version}</project.version>
					</systemPropertyVariables>
					<skipTests>${skipTests}</skipTests>
					<argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
					<printSummary>true</printSummary>
					<redirectTestOutputToFile>true</redirectTestOutputToFile>
					<parallel>none</parallel>
					<forkCount>0</forkCount>
					<threadCount>1</threadCount>
					<!-- 
					Dummy classes folder in order to make sure that none of the source 
					project classes are included in the test (and consequently Glassfish embedded) classpath.
					This way Glassfish will only load artifacts explicitly deployed via Arquillian
					-->
					<classesDirectory>dummy</classesDirectory>
				</configuration>
				<executions>
					<execution>
						<id>integration-test</id>
						<goals>
							<goal>integration-test</goal>
						</goals>
						<phase>integration-test</phase>
						<configuration>
							<includes>
								<include>**/*IT.java</include>
							</includes>
							<excludes>
								<exclude>**/*$*</exclude>
							</excludes>
						</configuration>
					</execution>
					<execution>
						<id>verify</id>
						<phase>verify</phase>
						<goals>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
				<filtering>true</filtering>
			</testResource>
		</testResources>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.jboss.arquillian.extension</groupId>
				<artifactId>arquillian-drone-bom</artifactId>
				<version>${arquillian-drone-bom.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
	
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>org.jboss.arquillian.junit</groupId>
			<artifactId>arquillian-junit-container</artifactId>
			<version>${arquillian-junit-container.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.arquillian.container</groupId>
			<artifactId>arquillian-glassfish-embedded-3.1</artifactId>
			<version>${arquillian-glassfish-embedded.version}</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<artifactId>shrinkwrap-api</artifactId>
					<groupId>org.jboss.shrinkwrap</groupId>
				</exclusion>
				<exclusion>
					<artifactId>arquillian-container-spi</artifactId>
					<groupId>org.jboss.arquillian.container</groupId>
				</exclusion>
				<exclusion>
					<artifactId>shrinkwrap-descriptors-spi</artifactId>
					<groupId>org.jboss.shrinkwrap.descriptors</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.glassfish.main.extras</groupId>
			<artifactId>glassfish-embedded-all</artifactId>
			<version>${glassfish-embedded.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.arquillian.extension</groupId>
			<artifactId>arquillian-drone-impl</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<artifactId>arquillian-config-api</artifactId>
					<groupId>org.jboss.arquillian.config</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.jboss.arquillian.extension</groupId>
			<artifactId>arquillian-drone-selenium</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<artifactId>arquillian-config-api</artifactId>
					<groupId>org.jboss.arquillian.config</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.jboss.arquillian.extension</groupId>
			<artifactId>arquillian-drone-selenium-server</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.arquillian.extension</groupId>
			<artifactId>arquillian-drone-webdriver-depchain</artifactId>
			<type>pom</type>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<artifactId>arquillian-config-api</artifactId>
					<groupId>org.jboss.arquillian.config</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		
		<dependency>
		    <groupId>org.jboss.arquillian.graphene</groupId>
		    <artifactId>graphene-webdriver</artifactId>
		    <version>${graphene-webdriver.version}</version>
		    <type>pom</type>
		    <scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>${h2.version}</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-jdk14</artifactId>
			<version>${slf4j-api.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
			<version>${javaee-api.version}</version>
			<scope>provided</scope>
		</dependency>
		
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j-api.version}</version>
		</dependency>

	</dependencies>

</project>
